--- a/template/.env.example
+++ b/template/.env.example
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/template
+MONGO_URI=
 JWT_SECRET=supersecret
 ACCESS_TOKEN_SECRET=access-token-secret
 ACCESS_TOKEN_EXPIRY=15m
