--- a/template/.env.example
+++ b/template/.env.example
@@ -1,6 +1,6 @@
 PORT=5000
 MONGO_URI=
-JWT_SECRET=supersecret
+JWT_SECRET=
 ACCESS_TOKEN_SECRET=access-token-secret
 ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_SECRET=refresh-token-secret
