--- a/template/.env.example
+++ b/template/.env.example
@@ -1,7 +1,7 @@
 PORT=5000
 MONGO_URI=
 JWT_SECRET=
-ACCESS_TOKEN_SECRET=access-token-secret
+ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_SECRET=refresh-token-secret
 REFRESH_TOKEN_EXPIRY=7d
