Update REFRESH_TOKEN_SECRET in .env.example

--- a/template/.env.example
+++ b/template/.env.example
@@ -3,5 +3,5 @@ MONGO_URI=
 JWT_SECRET=
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=15m
-REFRESH_TOKEN_SECRET=refresh-token-secret
+REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=7d
